# IFJ-Project-2022

./: .gitignore  CMakeLists.txt  README.md  help.ifjcode
IFJcode22_examples/: help.ifjcode  if_code.ifjcode  if_while.ifjcode  while_pre_nas.ifjcode
docs/: IFJ PROJEKT - VARIANTA TRP.pptx  KA_end_states.xlsx  LL_gramatika.docx  dokumentace.docx
src/: Makefile  errors.c  errors.h  expr  expr.c  expr.h  fact_non_rec.php  generator.c  generator.h  ial_hash.c  ial_hash.h  ifj  list.c  list.h  main.c  parser.c  parser.h  scanner.c  scanner.h  semanticsToDo  sk.php  src.rar  strings.c  strings.h  strings.php  symtable.c  symtable.h  todo.txt
src/tests/: example3.php  fact_non_rec.php  fact_rec.php  hello.php  null.php  strings.php
